--- a/docker-amundsen.yml
+++ b/docker-amundsen.yml
@@ -60,12 +60,7 @@ services:
          - PROXY_HOST=bolt://neo4j_amundsen
       command: gunicorn -w 2 --bind :5000 metadata_service.metadata_wsgi
   amundsenfrontend:
-      build:
-        args:
-          SEARCHSERVICE_BASE: http://amundsensearch:5001
-          METADATASERVICE_BASE: http://amundsenmetadata:5002
-        context: .
-        dockerfile: Dockerfile.frontend.local
+      image: rafifabdussalam/amundsen:1
       container_name: amundsenfrontend
       depends_on:
         - amundsenmetadata
